--- a/HW8.html
+++ b/HW8.html
@@ -157,8 +157,10 @@
             }
 
             $scope.checkDetails = function () {
-                window.stype = "user";
-                window.offset = 0;
+                $('#dataTable').hide();
+                $('#dataTable2').hide();
+                $('#previous').hide();
+                $('#next').hide();
                 $http.post('hw8.php',
                     $.param({
                         "id": "124984464200434"
@@ -177,6 +179,7 @@
                     function errorCallback(response) {
                         console.log("Failure");
                     });
+                $('#detailsPage').show();
             }
 
             $scope.userSelect = function () {
@@ -278,7 +281,7 @@
                         </tr>
                     </thead>
 
-                    <tr ng-repeat="x in names">
+                    <tr id="dataTable2" ng-repeat="x in names">
                         <td>{{ x.number1 }}</td>
                         <td><img ng-src="{{x.photo1}}" width="50px" height="50px"></td>
                         <td>{{ x.name1 }}</td>
@@ -293,6 +296,26 @@
 
             <button class="btn btn-default" id="previous" type="button" style="margin-left: 10px; width: 80px;" ng-click="fbprev()">Previous</button>
             <button class="btn btn-default" type="button" id="next" style="margin-left: 10px; width: 80px;" ng-click="fbnext()">Next</button>
+
+            <div id="detailsMainPage" style="display: inline-block; width: 100%; padding-top: 10px;">
+                <div style="display: block">
+                    <div style="float: left"><a onclick="clickBack()"><span style="font-weight: bold"> <span class="glyphicon glyphicon-chevron-left"></span> Back</span></a></div>
+                    <div style="float: right"><span class="glyphicon glyphicon-star-empty"></span><img src="facebook.png" width="20px" height="20px"></div>
+                </div>
+                <br>
+                <div>
+                    <div id="detailsPage" class="row" style="text-align: Left; display: block">
+                        <div class="col-md-6" style="border: 1px solid;">
+                            Album
+                        </div>
+
+                        <div class="col-md-6" style="border: 1px solid">
+                            Post
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <!--
