--- a/HW8.html
+++ b/HW8.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -54,16 +53,28 @@
             background-color: dodgerblue;
             color: white;
         }
+        /*EDITTED BY ADITYA*/
+        
+        .active {
+            background-color: dodgerblue;
+            color: white;
+        }
+        /*EDITTED BY ADITYA*/
         
         #previous,
-        #next,
-        #dataTable {
+        #next {
             display: none;
         }
     </style>
     <script>
         window.offset = 0;
         window.stype = "user";
+        var viewData = {
+            users: [],
+            pages: [],
+            events: [],
+            groups: []
+        }
 
         function postAndGet($scope, stype, $http) {
             $scope.names = {};
@@ -79,7 +90,10 @@
                 }
             ).then(function (response) {
                     var viewData = {
-                        employees: []
+                        employees: [],
+                        pages: [],
+                        events: [],
+                        groups: []
                     }
                     var array = {}
                     if (response['data'] && response['data']['data']) {
@@ -110,8 +124,8 @@
 
                     console.log(viewData.employees);
                     $scope.names = viewData.employees;
+                    $('#progressBar').hide();
                     $('#dataTable').show();
-                    $('#dataTable2').show();
                 },
                 function errorCallback(response) {
                     alert("Failure");
@@ -121,21 +135,22 @@
         var app = angular.module('myApp', []);
         app.controller('formCtrl', function ($scope, $http) {
 
+            $('#dataTable').hide();
+            $('#progressBar').hide();
             $scope.fbsearch = function () {
-                $('progressBar').value = "10%"
+                $('#progressBar').show();
                 window.offset = 0;
                 window.stype = "user";
                 postAndGet($scope, "User", $http);
+
             };
 
             $scope.fbnext = function () {
-                $('progressBar').value = "10%"
                 window.offset += 25;
                 postAndGet($scope, window.stype, $http);
             };
 
             $scope.fbprev = function () {
-                $('progressBar').value = "10%"
                 if (window.offset - 25 < 0) {
                     window.offset = 0;
                 } else {
@@ -147,15 +162,11 @@
             $scope.fbreset = function () {
                 window.offset = 0;
                 window.stype = "user";
-                $('progressBar').html("50%");
-                $scope.searchKeywordCopy = "RESET";
-                $scope.searchKeyword = "USC";
+                $('#searchText').nodeValue = "";
                 $scope.names = {};
                 $('#dataTable').hide();
-                $('#dataTable2').hide();
                 $('#previous').hide();
                 $('#next').hide();
-                $('progressBar').html("100%");
             }
 
             $scope.checkDetails = function (id) {
@@ -169,7 +180,6 @@
                     }
                 ).then(function (response) {
                         $('#dataTable').hide();
-                        $('#dataTable2').hide();
                         $('#previous').hide();
                         $('#next').hide();
                         console.log(JSON.stringify(response));
@@ -237,31 +247,67 @@
             $scope.userSelect = function () {
                 window.offset = 0;
                 window.stype = "user";
+                /*EDITTED BY ADITYA*/
+
+                var activeElement = document.getElementsByClassName("active")[0];
+                activeElement.className = "nav-link";
+                document.getElementById("Users").className = "nav-link active";
+
+                /*EDITTED BY ADITYA*/
                 postAndGet($scope, window.stype, $http);
             }
             $scope.pageSelect = function () {
                 window.offset = 0;
                 window.stype = "page";
+                /*EDITTED BY ADITYA*/
+
+                var activeElement = document.getElementsByClassName("active")[0];
+                activeElement.className = "nav-link";
+                document.getElementById("Pages").className = "nav-link active";
+
+                /*EDITTED BY ADITYA*/
                 postAndGet($scope, window.stype, $http);
             }
             $scope.eventSelect = function () {
                 window.offset = 0;
                 window.stype = "event";
+                /*EDITTED BY ADITYA*/
+
+                var activeElement = document.getElementsByClassName("active")[0];
+                activeElement.className = "nav-link";
+                document.getElementById("Events").className = "nav-link active";
+
+                /*EDITTED BY ADITYA*/
                 postAndGet($scope, window.stype, $http);
             }
             $scope.groupSelect = function () {
                 window.offset = 0;
                 window.stype = "group";
+                /*EDITTED BY ADITYA*/
+
+                var activeElement = document.getElementsByClassName("active")[0];
+                activeElement.className = "nav-link";
+                document.getElementById("Groups").className = "nav-link active";
+
+                /*EDITTED BY ADITYA*/
                 postAndGet($scope, window.stype, $http);
             }
             $scope.favoriteSelect = function () {
                 //window.offset = 0;
                 //                postAndGet($scope, "User", $http);
+
+                /*EDITTED BY ADITYA*/
+
+                var activeElement = document.getElementsByClassName("active")[0];
+                activeElement.className = "nav-link";
+                document.getElementById("Favourites").className = "nav-link active";
+
+                /*EDITTED BY ADITYA*/
+
             }
 
             $scope.clickBack = function () {
                 $('#dataTable').show();
-                $('#dataTable2').show();
                 $('#previous').show();
                 $('#next').show();
                 $scope.albumDetails = {}
@@ -274,7 +320,7 @@
             }
 
             $scope.albumClick = function (id) {
-                $('#' + id).show();
+                $('#' + id).toggle();
                 for (var i = 1; i < 6; i++) {
                     if (i != id) {
                         $('#' + i).hide();
@@ -325,7 +371,7 @@
                         <h2 class="form-search-heading" style="display: inline; font-size: 20px; color: dodgerblue">FB Search</h2>
                     </div>
                     <div class="col-md-4" style="padding-right: 0px">
-                        <input type="text" id="searchText" class="form-control" value="usc" required autofocus style="padding-right: 0px" ng-model="searchKeyword">
+                        <input type="text" id="searchText" class="form-control" placeholder="type something..." required autofocus style="padding-right: 0px; padding-left: 10px" ng-model="searchKeyword">
                     </div>
                     <div class="col-md-1" style="padding-left: 0px">
                         <button class="btn btn-primary" type="submit" style="width: 80px; padding-left: 0px" ng-click="fbsearch()" id="submitq"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
@@ -338,15 +384,38 @@
             </form>
 
             <ul class="nav nav-tabs" id="myTabs" style="width: 100%; padding-left: 0; padding-right: 0; border-bottom: 2px solid blue;">
-                <li class="active Users" id="Users" style="width: 20%"><a href="#" ng-click="userSelect()">Users</a></li>
+                <!--<li class="active Users" id="Users" style="width: 20%"><a href="#" ng-click="userSelect()">Users</a></li>
                 <li class="Pages" id="Pages" style="width: 20%"><a href="#" ng-click="pageSelect()">Pages</a></li>
                 <li class="Events" id="Events" style="width: 20%"><a href="#" ng-click="eventSelect()">Events</a></li>
                 <li class="Groups" id="Groups" style="width: 20%"><a href="#" ng-click="groupSelect()">Groups</a></li>
-                <li class="Favorites" id="Favorites" style="width: 20%"><a href="#" ng-click="favoriteSelect()">Favorites</a></li>
+                <li class="Favorites" id="Favorites" style="width: 20%"><a href="#" ng-click="favoriteSelect()">Favorites</a></li>-->
+
+                <!--EDITTED BY ADITYA-->
+                <li class="nav-item" style="width: 20%">
+                    <a class="nav-link active" id="Users" href="#" ng-click="userSelect()">Users</a>
+                </li>
+                <li class="nav-item" style="width: 20%">
+                    <a class="nav-link" id="Pages" href="#" ng-click="pageSelect()">Pages</a>
+                </li>
+                <li class="nav-item" style="width: 20%">
+                    <a class="nav-link" id="Events" href="#" ng-click="eventSelect()">Events</a>
+                </li>
+                <li class="nav-item" style="width: 20%">
+                    <a class="nav-link" id="Groups" href="#" ng-click="groupSelect()">Groups</a>
+                </li>
+                <li class="nav-item" style="width: 20%">
+                    <a class="nav-link" id="Favourites" href="#" ng-click="favoriteSelect()">Favourites</a>
+                </li>
+                <!--EDITTED BY ADITYA-->
             </ul>
 
+            <div class="progress" id="progressBar" style="margin-top: 200px">
+                <p class="progress-bar progress-bar-striped active " role="progressbar " aria-valuenow="50" aria-valuemin="0 " aria-valuemax="100 " style="width:50%">
+                </p>
+            </div>
+
             <div class="table-responsive" style="display: inline-block; align-content: center; text-align: center; width: 100%; padding-top: 10px;">
-                <table id="dataTable" class="table" style="margin-top: 10px; width: 98%; text-align: initial; display: inline-table;">
+                <table id="dataTable" class="table table-hover" style="margin-top: 10px; width: 98%; text-align: initial; display: inline-table;">
                     <thead>
                         <tr>
                             <th style="width: 10%">#</th>
@@ -359,11 +428,15 @@
 
                     <tr ng-repeat="x in names">
                         <td>{{ x.number1 }}</td>
-                        <td><img ng-src="{{x.photo1}}" width="50px" height="50px"></td>
+                        <!--<td><img ng-src="{{x.photo1}}" width="50px" height="50px"></td>-->
+
+                        <!--EDITTED BY ADITYA-->
+                        <td><img ng-src="{{x.photo1}}" width="50px" height="50px" style="border-radius: 100%"></td>
+                        <!--EDITTED BY ADITYA-->
                         <td>{{ x.name1 }}</td>
                         <td><a href="#" style="color: black; border: 1px solid; padding: 5px;"><span class="glyphicon glyphicon-star-empty"></span></a></td>
                         <td>
-                            <a ng-click="checkDetails(x.id)" style="color: black; border: 1px solid; padding: 5px;"><span class=' glyphicon glyphicon-chevron-right '></span></a>
+                            <a ng-click="checkDetails(x.id)" style="color: black; border: 1px solid; padding: 5px; cursor: pointer"><span class=' glyphicon glyphicon-chevron-right '></span></a>
                         </td>
                     </tr>
 
@@ -443,41 +516,6 @@
         </div>
     </div>
     <!-- formCtrl -->
-
-    <!--
-        <ul class="nav nav-tabs " role="tablist " id="myTabs ">
-            <li role="presentation " class="active "><a href="#home " aria-controls="home " role="tab " data-toggle="tab ">Home</a></li>
-                            <li role="presentation "><a href="#profile " aria-controls="profile " role="tab " data-toggle="tab ">Profile</a></li>
-                            <li role="presentation " class="active "><a href="#messages " aria-controls="messages " role="tab " data-toggle="tab ">Messages</a></li>
-                            <li role="presentation "><a href="#settings " aria-controls="settings " role="tab " data-toggle="tab ">Settings</a></li>
-                            </ul>
-
-                            <script>
-                                $('#myTabs a').click(function (e) {
-                                    e.preventDefault()
-                                    $(this).tab('show')
-                                })
-                            </script>-->
-
-
-
-
-    <!-- Main component for a primary marketing message or call to action -->
-    <div class="output ">
-
-    </div>
-
-
-
-    <!--        Progress Bar-->
-    <div class="progress ">
-        <p id="progressBar " class="progress-bar progress-bar-striped active " role="progressbar " aria-valuenow="40 " aria-valuemin="0 " aria-valuemax="100 " style="width:40% ">
-            40%
-        </p>
-    </div>
-
-
-    </div>
     <!-- /container -->
 </body>
 
